--- a/beginning/beginning/beginning.csproj
+++ b/beginning/beginning/beginning.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Animals.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="Circle.cs" />
     <Compile Include="Dreieck.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rechteck.cs" />
+    <Compile Include="Tiger.cs" />
     <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
